--- a/login/6/ahn_jae_venderbush_sweyn/templates/Home.html
+++ b/login/6/ahn_jae_venderbush_sweyn/templates/Home.html
@@ -8,6 +8,20 @@
 </head>
 <body>
 <h2> Welcome {{username}}! Choose what you would like to do! </h2> 
-<a href="http://www.google.com><input type="link" name="button" value="Go To Google"></a>
-<a href="http://bert.stuy.edu/pbrooks/schedules/schedules.py><input type="link" name="button" value="Check the time for today's schedule"></a>
-<a href="http://c9.io><input type="link" name="button" value="Work on HTML in the Cloud"></a> 
+<p><a href="http://www.google.com">
+<input type="link" name="button" value="Go To Google">
+</a>
+</p>
+
+<p><a href="http://bert.stuy.edu/pbrooks/schedules/schedules.py"><input type="link" name="button" value="Check the time for today's schedule">
+</a>
+</p>
+<p>  
+<a href="http://c9.io:><input type="link" name="button" value="Work on HTML in the Cloud">
+</a> 
+</p>
+<p> 
+<a href="logout.html">Logout</a>
+</p>
+</body> 
+</html> 
