--- a/login/7/field-thompson_will_luo_haoxin/templates/login.html
+++ b/login/7/field-thompson_will_luo_haoxin/templates/login.html
@@ -6,9 +6,12 @@
 <body>
 <h1>Login</h1>
 <form method="POST">
-<input type="text" name="username" placeholder="Username"> <br>
-<input type="text" name="password" placeholder="Password"> <br>
+<input type="text" name="username" placeholder="username"> <br>
+<input type="text" name="password" placeholder="password"> <br>
 <input type="submit" name="button" value="Login">
+
+<br>
+New user? <a href = "/register"> click here to sign up </a>
 </form>
 <hr>
 <address></address>
