Updated. Needs to be cleaned

--- a/login/6/chen_simon_tang_derek/templates/login.html
+++ b/login/6/chen_simon_tang_derek/templates/login.html
@@ -1,11 +1,10 @@
 <h1>Login</h1>
 <br>
-<form method = "GET">
 <h3> Please login to continue </h3>
-<form method = "post">
+<form method="POST">
  Username: <input type ="text" name = "username">
   <br>
- Password:  <input type ="text" name = "password">
+ Password:  <input type ="password" name = "password">
   <br>
   <input type ="submit" name = "button" value = "Login">
   <input type ="submit" name = "button" value = "Cancel">
