--- a/login/6/chen_simon_tang_derek/templates/register.html
+++ b/login/6/chen_simon_tang_derek/templates/register.html
@@ -1,12 +1,13 @@
 <h1> Register </h1>
 
-<form method = "GET">
+<form method="POST">
+<h3>{{message}}</h3>
 <br>
 Username: <input type="text" name="username">
 <br>
-Password: <input type = "text" name = "password">
+Password: <input type = "password" name = "password">
 <br>
-Confirm Password: <input type = "text" name = "confirmpassword">
+Confirm Password: <input type = "password" name = "confirmpassword">
 <br>
 <input type = "submit" name = "button" value= "Submit">
 <input type = "submit" name = "button" value= "Cancel">
