--- a/login/7/duda_rosenberg/templates/login.html
+++ b/login/7/duda_rosenberg/templates/login.html
@@ -21,7 +21,7 @@ Password: &nbsp<input type="password" name="psswrd">
 
 <p>{{error}}</p>
 
-<!-- <a href="/register"> Register here </a> -->
+ <a href="/register"> Register here </a>
 
 </body>
 
