--- a/login/6/ahn_jae_venderbush_sweyn/templates/login.html
+++ b/login/6/ahn_jae_venderbush_sweyn/templates/login.html
@@ -15,7 +15,10 @@
 <form method = "post">
 <h1 style="margin: 0.0px 0.0px 16.0px 0.0px; font: 24.0px Times"><b>Please login.</b></h1>
 <p class="p2">Username: <input id = "username" type="username" name="username" placeholder = "Username">
-Password: <input id= "password" type = "password" name = "password" placeholder="password"></form>
-Don't have one? Register here. <a href="file:///register"><span class="s1">Register</span></a></p>
+Password: <input id= "password" type = "password" name = "password" placeholder="password"> 
+
+<input type="submit" name="button" value="Submit"></input>
+</form>
+Don't have one? Register here. <a href="register"><span class="s1">Register</span></a></p>
 </body>
 </html>
