--- a/login/6/ahn_jae_venderbush_sweyn/templates/logout.html
+++ b/login/6/ahn_jae_venderbush_sweyn/templates/logout.html
@@ -3,5 +3,11 @@
 <title>Logout</title>
 <body>
 Your logout was successful. 
+
+<p>  
+<a href="/">
+<input type="button" name="button" value="Go Home">
+</a> 
+</p>
 </body>
 </html> 
