--- a/login/6/ahn_jae_venderbush_sweyn/templates/register.html
+++ b/login/6/ahn_jae_venderbush_sweyn/templates/register.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title> Home </title>
+<title> Register </title>
 <style> 
 <link rel="stylesheet" type="text/css" href="#{ url_for('static', filename='stylesheets/register.css') }">
 </style>
@@ -11,10 +11,7 @@
 <h2> Please input your information in order to get access to our wonderful utility. </h2> 
 <form method = "post">
 Username you would like: <input type = "text" name = "username"></input>
-And the password: <input type = "text" name="password"></input> 
-
-Finally, give us your email for consistent updates: 
-<input type = "text" name="email"></input>
+And the password: <input type = "password" name="password"></input> 
 Then, hit submit:
 <input type="submit" name="button" value="Submit"></input>
 </form>
