--- a/login/6/ahn_jae_venderbush_sweyn/templates/Home.html
+++ b/login/6/ahn_jae_venderbush_sweyn/templates/Home.html
@@ -9,19 +9,25 @@
 <body>
 <h2> Welcome {{username}}! Choose what you would like to do! </h2> 
 <p><a href="http://www.google.com">
-<input type="link" name="button" value="Go To Google">
+<input type="button" name="button" value="Go to Google">
 </a>
 </p>
 
-<p><a href="http://bert.stuy.edu/pbrooks/schedules/schedules.py"><input type="link" name="button" value="Check the time for today's schedule">
+<p><a href="http://bert.stuy.edu/pbrooks/schedules/schedules.py"><input type="button" name="button" value="Check today's schedule times">
 </a>
 </p>
 <p>  
-<a href="http://c9.io:><input type="link" name="button" value="Work on HTML in the Cloud">
+<a href="http://c9.io">
+<input type="button" name="button" value="Work on HTML in the Cloud">
+</a> 
+</p>
+<p>  
+<a href="/count">
+<input type="button" name="button" value="Go to Count Page">
 </a> 
 </p>
 <p> 
-<a href="logout.html">Logout</a>
+<a href="logout">Logout</a>
 </p>
 </body> 
 </html> 
