small fixes, added user title to homepage

--- a/login/7/field-thompson_will_luo_haoxin/templates/home.html
+++ b/login/7/field-thompson_will_luo_haoxin/templates/home.html
@@ -1,4 +1,4 @@
-<title>Welcome to the home page</title>
+<title>Welcome to {{user}}'s home page</title>
 <br>
 <h1>This is your home page</h1>
 <h2> Do you want to...</h2>
@@ -9,7 +9,7 @@
 <li> <a href="/future">plan for the future</a> </li>
 </ul>
 
-<a href="/logout">click here to log out</a>
+<a href="/logout">Log out</a>
 
 
 
