--- a/login/7/field-thompson_will_luo_haoxin/templates/login.html
+++ b/login/7/field-thompson_will_luo_haoxin/templates/login.html
@@ -10,7 +10,6 @@
 <input type="text" name="password" placeholder="password"> <br>
 <input type="submit" name="button" value="Login">
 </form>
-<br>
 <hr>
-New user? <a href = "/register"> click here to sign up </a>
+New user? <a href = "/register">Click here to register</a>
 </body> </html>
