--- a/login/6/zheng_stanley_lin_helen/templates/register.html
+++ b/login/6/zheng_stanley_lin_helen/templates/register.html
@@ -1,8 +1,11 @@
-<h1>Register</h1>
-<form method="post">
+<!DOCTYPE HTML>
+<html>
+        <h1>Register</h1>
+        <form method="post">
         <input type="text" name="username" value="username">
         <input type="text" name="password" value="password">
         <p>
         <input type="submit" name="button" value="Register">
         <input type="submit" name="button" value="Cancel">
-</form>
+        </form>
+</html>
