added user recognition + logout and back links to each page

--- a/login/7/field-thompson_will_luo_haoxin/templates/home.html
+++ b/login/7/field-thompson_will_luo_haoxin/templates/home.html
@@ -8,7 +8,8 @@
 <li> <a href="/work">do work</a> </li>
 <li> <a href="/future">plan for the future</a> </li>
 </ul>
-
+<hr>
+<b>{{user}}</b> is logged in
 <a href="/logout">Log out</a>
 
 
