--- a/login/7/field-thompson_will_luo_haoxin/templates/work.html
+++ b/login/7/field-thompson_will_luo_haoxin/templates/work.html
@@ -2,10 +2,14 @@
 
 <h2>now for some motivation</h2>
 <p>"I like work: it fascinates me. I can sit and look at it for hours."
-<p>                                                 ― Jerome K. Jerome 
+<br>                                                 ― Jerome K. Jerome 
 <br>
 Feel motivated? Good.
 <a href="/logout">Log out</a> and do your work. 
 <br>
 <br>
 Orrrrr if that changed your mind, you can go <a href="/">back</a> and keep <a href="/procrastination">procrastinating</a>
+<hr>
+<b>{{user}}</b> is logged in
+<a href="/">Back</a>
+<a href="/logout">Log Out</a>
