--- a/login/7/field-thompson_will_luo_haoxin/templates/procrastination.html
+++ b/login/7/field-thompson_will_luo_haoxin/templates/procrastination.html
@@ -1,4 +1,4 @@
-<h1>end less procastination just for you</h1>
+<h1>Endless procastination just for you</h1>
 
 <p>“You can't just turn on creativity like a faucet.
 <p> You have to be in the right mood.
@@ -6,6 +6,8 @@
 <p>Last-minute panic.”
                    ― Bill Watterson
 
-<br><br>
+
+<hr>
+<b>{{user}}</b> is logged in
 <a href="/">Back</a>
 <a href="/logout">Log Out</a>
