--- a/login/7/field-thompson_will_luo_haoxin/templates/registered.html
+++ b/login/7/field-thompson_will_luo_haoxin/templates/registered.html
@@ -1,3 +1,5 @@
-<h1>Congratulations! You are now registered user! <h1>
+<title>{{user}} Registered</title>
 
-<a href ="/"> Click me to return go back to the home page</a>
+<h3>Congratulations, {{user}}! You are now registered user! <h3>
+
+<a href ="/">Go to your homepage!</a>
