--- a/login/7/duda_rosenberg/templates/register.html
+++ b/login/7/duda_rosenberg/templates/register.html
@@ -1,6 +1,8 @@
 <h1> Please Register </h1>
 
+<form method="POST">
 
-Username: <input type=text name=usr>
-Password: <input type=text name=pwd>
+Username: <input type="text" name="usr">
+Password: <input type="password" name="pwd">
 
+<input type="submit" value="Submit">
