--- a/login/7/zane_hunter/templates/register-form.html
+++ b/login/7/zane_hunter/templates/register-form.html
@@ -1,6 +1,8 @@
 <h1> Register </h1>
 
-
+{% if failure %}
+Sorry, the username {{ d['username'] }} is taken.
+{% endif %}
 
 <form method="POST">
 	Username: <input type="text" name="username"><br>
