Pretty up homepage

--- a/login/7/zane_hunter/templates/login.html
+++ b/login/7/zane_hunter/templates/login.html
@@ -1,8 +1,8 @@
 <h1> Agriculture </h1>
 
 <form method="post">
-	<input type="text" name="uname" required>
-	<input type="password" name="passw" required>
+	Username: <input type="text" name="uname" required> <br>
+	Password: <input type="password" name="passw" required> <br>
 	<input type="submit" value="give us your laurels">
 </form>
 
