--- a/login/6/rein_dorit_argodale_jane/templates/register.html
+++ b/login/6/rein_dorit_argodale_jane/templates/register.html
@@ -1,19 +1,9 @@
-<h1> Login Form </h1>
+<h1>Register </h1>
 
-<form method = "POST"> </form>
-
-Username: </p><input type = "text" name = "Username"> 
-
-<br>
-<br>
-
-Password: </p><input type - "text" name - "Password"> 
-
-<br>
-<br>
-
-<input type="Submit" name="Button" value="Submit">
-<input type="Submit" name="Button" value="Cancelled">
+<form method = "POST">
+Username: <input type="text" name="username"></input>
+Password: <input type="password" name="password"></input>
+<input type="submit" name="button" value="Submit"></input>
 
 </form>
 
