--- a/login/7/zane_hunter/templates/ferns.html
+++ b/login/7/zane_hunter/templates/ferns.html
@@ -8,4 +8,8 @@ h1 {
 	color:"Chartreuse";
 }
 </style>
-<h1> what you came here for, {{name}}</h1>  <a href="/logout/"> click this if you hate happiness</a>
+<h1> what you came here for, {{name}}</h1> 
+
+<a href="/logout/"> click this if you hate happiness</a>
+<br>
+<a href="/wittle"> click this for leet haxxorz</a>
