Add links to login

--- a/login/7/zane_hunter/templates/login.html
+++ b/login/7/zane_hunter/templates/login.html
@@ -3,6 +3,9 @@
 <form method="post">
 	Username: <input type="text" name="uname" required> <br>
 	Password: <input type="password" name="passw" required> <br>
-	<input type="submit" value="give us your laurels">
+	<input type="submit" value="give us your laurels"> <br>
 </form>
 
+<a href="/"> Return to your home-related location </a>
+<br>
+<a href="/register"> You haven't registered? What's your problem? </a>
