Add link to wittle

--- a/login/7/zane_hunter/templates/wittle.html
+++ b/login/7/zane_hunter/templates/wittle.html
@@ -8,6 +8,6 @@ h1 {
 	color:"Chartreuse";
 }
 </style>
-<h1> WE ARE THE STRONGMEN. </h1>
+<a href='/'> <h1> WE ARE THE STRONGMEN. </h1> </a>
 <a href="/logout/"> <h1> WE ARE THE BADMEN. </h1> </a>
 
