--- a/login/6/rein_dorit_argodale_jane/templates/login.html
+++ b/login/6/rein_dorit_argodale_jane/templates/login.html
@@ -8,4 +8,4 @@ Your Password: <input type="text" name="password"></input>
 </form>
 
 <p> If you arent signed up yet, register now! </p>
-<input type="submit" name="button" value="register"></input>
+<a href = "/register">Register</a>
