Changed variable start and end back to {{ and }}

--- a/login/6/greene_victoria_zhu_steve/templates/login.html
+++ b/login/6/greene_victoria_zhu_steve/templates/login.html
@@ -13,7 +13,7 @@
 	                <input class="button" type="submit" value="Login">
 	            </form>
 	        </div>
-	        <a class="bottom-link" href="#{ url_for('register') }">Don't have an account? Register here.</a>
+	        <a class="bottom-link" href="{{ url_for('register') }}">Don't have an account? Register here.</a>
 	    </span>
 	</div>
 = endblock
