--- a/login/6/greene_victoria_zhu_steve/templates/register.html
+++ b/login/6/greene_victoria_zhu_steve/templates/register.html
@@ -14,7 +14,7 @@
 					<input class="button" type="submit" value="Register">
 				</form>
 			</div>
-			<a class="bottom-link" href="#{ url_for('login') }">Already have an account? Login.</a>
+			<a class="bottom-link" href="{{ url_for('login') }}">Already have an account? Login.</a>
 		</span>
 	</div>
 = endblock
