--- a/login/6/greene_victoria_zhu_steve/templates/layout.html
+++ b/login/6/greene_victoria_zhu_steve/templates/layout.html
@@ -5,7 +5,7 @@
     	= block title
     	= endblock
     </title>
-    <link rel="stylesheet" type="text/css" href="#{ url_for('static', filename='stylesheets/application.css') }">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='stylesheets/application.css') }}">
 </head>
 <body>
 	= block body
