--- a/login/6/cohen_eli_rehab_arfan/templates/home.html
+++ b/login/6/cohen_eli_rehab_arfan/templates/home.html
@@ -1,33 +1,13 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <meta http-equiv="Content-Style-Type" content="text/css">
-  <title></title>
-  <meta name="Generator" content="Cocoa HTML Writer">
-  <meta name="CocoaVersion" content="1187.39">
-  <style type="text/css">
-    p.p1 {margin: 0.0px 0.0px 0.0px 0.0px; line-height: 18.0px; font: 12.0px Consolas; color: #000080}
-    p.p2 {margin: 0.0px 0.0px 0.0px 0.0px; line-height: 18.0px; font: 12.0px Consolas; color: #000080; min-height: 14.0px}
-    p.p3 {margin: 0.0px 0.0px 0.0px 0.0px; line-height: 18.0px; font: 12.0px Consolas; color: #333333}
-    span.s1 {color: #000080}
-    span.s2 {color: #008080}
-    span.s3 {color: #dd1144}
-    span.Apple-tab-span {white-space:pre}
-  </style>
-</head>
-<body>
-<p class="p1">&lt;html&gt;</p>
-<p class="p1"><span class="Apple-tab-span">	</span>&lt;head&gt;</p>
-<p class="p1"><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span>&lt;title&gt;HomePage&lt;/title&gt;</p>
-<p class="p1"><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span>&lt;style&gt;* {font-family:fantasy;} &lt;/style&gt;</p>
-<p class="p1"><span class="Apple-tab-span">	</span>&lt;/head&gt;</p>
-<p class="p2"><br></p>
-<p class="p1"><span class="Apple-tab-span">	</span>&lt;body&gt;</p>
-<p class="p3"><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span><span class="s1">&lt;h2&gt;</span> Welcome to the Main Page, {{username}}! This is a simple Login <span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span>Application Framework.<span class="s1">&lt;/h2&gt;</span><span class="Apple-converted-space"> </span></p>
-<p class="p3"><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span>&lt;h2&gt;Stuy CS Rules!&lt;/h2&gt;</p>
-<p class="p3">  <span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span><span class="s1">&lt;a</span> <span class="s2">href=</span><span class="s3">"/logout"</span><span class="s1">&gt;</span> Logout! <span class="s1">&lt;/a&gt;&lt;br&gt;</span></p>
-<p class="p1"><span class="Apple-tab-span">	</span>&lt;/body&gt;</p>
-<p class="p1">&lt;/html&gt;</p>
-</body>
+	<head>
+		<title>HomePage</title>
+		<style>* {font-family:fantasy;} </style>
+	</head>
+
+	<body>
+		<h2> Welcome to the Main Page, {{username}}! This is a
+		simple Login Application Framework.</h2> 
+		<h2>Stuy CS Rules!</h2>
+		<a href="/logout"> Logout! </a><br>
+	</body>
 </html>
