--- a/login/6/cohen_eli_rehab_arfan/templates/login.html
+++ b/login/6/cohen_eli_rehab_arfan/templates/login.html
@@ -1,38 +1,14 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <meta http-equiv="Content-Style-Type" content="text/css">
-  <title></title>
-  <meta name="Generator" content="Cocoa HTML Writer">
-  <meta name="CocoaVersion" content="1187.39">
-  <style type="text/css">
-    p.p1 {margin: 0.0px 0.0px 0.0px 0.0px; line-height: 18.0px; font: 12.0px Consolas; color: #000080}
-    p.p2 {margin: 0.0px 0.0px 0.0px 0.0px; line-height: 18.0px; font: 12.0px Consolas; color: #000080; min-height: 14.0px}
-    p.p3 {margin: 0.0px 0.0px 0.0px 0.0px; line-height: 18.0px; font: 12.0px Consolas; color: #333333}
-    p.p4 {margin: 0.0px 0.0px 0.0px 0.0px; line-height: 18.0px; font: 12.0px Consolas; color: #008080}
-    p.p5 {margin: 0.0px 0.0px 0.0px 0.0px; line-height: 18.0px; font: 12.0px Consolas; color: #dd1144}
-    span.s1 {color: #000080}
-    span.s2 {color: #333333}
-    span.s3 {color: #dd1144}
-    span.s4 {color: #008080}
-    span.Apple-tab-span {white-space:pre}
-  </style>
-</head>
-<body>
-<p class="p1">&lt;html&gt;</p>
-<p class="p1"><span class="Apple-tab-span">	</span>&lt;head&gt;</p>
-<p class="p1"><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span>&lt;title&gt;Login&lt;/title&gt;</p>
-<p class="p1"><span class="Apple-tab-span">	</span>&lt;/head&gt;</p>
-<p class="p2"><br></p>
-<p class="p1"><span class="Apple-tab-span">	</span>&lt;body&gt;</p>
-<p class="p3"><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span><span class="s1">&lt;h3&gt;</span>Login to your account here:&lt;/h3&gt;</p>
-<p class="p4"><span class="s2">  <span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span></span><span class="s1">&lt;form</span><span class="s2"> </span>method=<span class="s3">"POST"</span><span class="s1">&gt;</span></p>
-<p class="p3"><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span>Username: <span class="s1">&lt;input</span> <span class="s4">type=</span><span class="s3">"text"</span> <span class="s4">name=</span><span class="s3">"username"</span><span class="s1">&gt;</span> <span class="s1">&lt;/input&gt;</span></p>
-<p class="p3">    <span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span>Password: <span class="s1">&lt;input</span> <span class="s4">type=</span><span class="s3">"password"</span> <span class="s4">name=</span><span class="s3">"password"</span><span class="s1">&gt;</span> <span class="s1">&lt;/input&gt;</span></p>
-<p class="p5"><span class="s2">    <span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span></span><span class="s1">&lt;input</span><span class="s2"> </span><span class="s4">type=</span>"submit"<span class="s2"> </span><span class="s4">name=</span>"button"<span class="s2"> </span><span class="s4">value=</span>"submit"<span class="s1">&gt;</span><span class="s2"> </span><span class="s1">&lt;/input&gt;</span></p>
-<p class="p1"><span class="s2">  <span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span></span>&lt;/form&gt;</p>
-<p class="p3"><span class="Apple-tab-span">	</span>&lt;/body&gt;</p>
-<p class="p1">&lt;/html&gt;</p>
-</body>
+	<head>
+		<title>Login</title>
+	</head>
+
+	<body>
+		<h3>Login to your account here:</h3>
+		<form method="POST">
+		Username: <input type="text" name="username"> </input>
+		Password: <input type="password" name="password"> </input>
+		<input type="submit" name="button" value="submit"> </input>
+		</form>
+	</body>
 </html>
