Template for login2

--- a/login/6/rein_dorit_argodale_jane/templates/login2.html
+++ b/login/6/rein_dorit_argodale_jane/templates/login2.html
@@ -1,5 +1,5 @@
 <h1> Login Page </h1>
-<h2> Invalid username! Please try again. </h2>
+<h2> Invalid password! Please try again. </h2>
 <form method = post>
 
 Your Username: <input type="text" name="username"></input>
