complete and working login stuff

--- a/7/chung_victoria/login/templates/register.html
+++ b/7/chung_victoria/login/templates/register.html
@@ -4,10 +4,11 @@
 To register, please fill out the following fields.
 
 <form method = "POST">
-Username: <input type="username" name="username" value="">
-Password: <input type="password" name="password" value="">
+Username: <input type="text" name="username">
+Password: <input type="text" name="password">
 
+<br>
 <input type="submit" name="button" value="Register">
-<hr>
-
 </form>
+<hr>
+<a href="/"><-- Back</a>
