--- a/login/6/greene_victoria_zhu_steve/templates/page1.html
+++ b/login/6/greene_victoria_zhu_steve/templates/page1.html
@@ -3,7 +3,7 @@
 		Hello there!
 = endblock
 = block body
-		<h1>"Did you know that the bikini was invented in ancient Rome?"</h1>
+		<h1><br><br>"Did you know that the bikini was invented in ancient Rome?"</h1>
 		<br>
-		<a>Go back to the login page!</a>
+		<a class="bottom-link" href="{{ url_for('login') }}"Go back to the login page!</a>
 = endblock
