--- a/login/6/greene_victoria_zhu_steve/templates/page1.html
+++ b/login/6/greene_victoria_zhu_steve/templates/page1.html
@@ -5,5 +5,5 @@
 = block body
 		<h1><br><br>"Did you know that the bikini was invented in ancient Rome?"</h1>
 		<br>
-		<a class="bottom-link" href="{{ url_for('login') }}"Go back to the login page!</a>
+		<a href="{{ url_for('login') }}">Go back to the login page!</a>
 = endblock
