--- a/login/6/greene_victoria_zhu_steve/templates/page2.html
+++ b/login/6/greene_victoria_zhu_steve/templates/page2.html
@@ -5,5 +5,5 @@
 = block body
 		<h1><br><br><br>"To get his quarterback!!!"</h1>
 		<br>
-		<a>Go back to the login page!</a>
+		<a href="{{ url_for('login') }}">Go back to the login page!</a>
 = endblock
