--- a/login/6/greene_victoria_zhu_steve/static/stylesheets/general.sass
+++ b/login/6/greene_victoria_zhu_steve/static/stylesheets/general.sass
@@ -55,7 +55,7 @@ input
 	font-weight: normal
 
 // link to Register/Login page
-a.bottom-link
+a
 	display: inline-block
 	margin-top: 10px
 	border-bottom: 1px dotted $textColor
