--- a/login/6/ahn_jae_venderbush_sweyn/templates/register.html
+++ b/login/6/ahn_jae_venderbush_sweyn/templates/register.html
@@ -6,14 +6,15 @@
 <link rel="stylesheet" type="text/css" href="#{ url_for('static', filename='stylesheets/register.css') }">
 </style>
 </head>
-<body> 
+<body>
 <h1> Our program allows you to access the tools you need for an everyday Stuyvesant student. </h1>
 <h2> Please input your information in order to get access to our wonderful utility. </h2> 
 <form method = "post">
-Username you would like: <input type = "text" name = "username"></input>
-And the password: <input type = "password" name="password"></input> 
-Then, hit submit:
+<p> Username you would like: <input type = "text" name = "username"></input> </p> 
+<p> And the password: <input type = "password" name="password"></input> </p>
+<p> Then, hit submit:
 <input type="submit" name="button" value="Submit"></input>
+</p>
 </form>
 </body>
 </html>
