--- a/login/6/greene_victoria_zhu_steve/templates/page1.html
+++ b/login/6/greene_victoria_zhu_steve/templates/page1.html
@@ -5,5 +5,5 @@
 = block body
 		<h1><br><br>"Did you know that the bikini was invented in ancient Rome?"</h1>
 		<br>
-		<a href="{{ url_for('login') }}">Logout</a>
+		<a href="{{ url_for('logout') }}">Logout</a>
 = endblock
