--- a/login/6/cohen_eli_rehab_arfan/templates/home.html
+++ b/login/6/cohen_eli_rehab_arfan/templates/home.html
@@ -8,6 +8,8 @@
 		<h2> Welcome to the Main Page, {{username}}! This is a
 		simple Login Application Framework.</h2> 
 		<h2>Stuy CS Rules!</h2>
+		<h3>For the first 3 digits of pi(!) go to /pi</h3>
+		<h3>For a complete list of reasons to buy windows 8, go to /windows</h3>
 		<a href="/logout"> Logout! </a><br>
 	</body>
 </html>
