--- a/login/6/greene_victoria_zhu_steve/templates/layout.html
+++ b/login/6/greene_victoria_zhu_steve/templates/layout.html
@@ -8,7 +8,11 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='stylesheets/application.css') }}">
 </head>
 <body>
-	= block body
-	= endblock
+	<div class="center-outer">
+	    <span>
+			= block body
+			= endblock
+		</span>
+	</div>
 </body>
 </html>
