--- a/login/6/greene_victoria_zhu_steve/static/stylesheets/general.sass
+++ b/login/6/greene_victoria_zhu_steve/static/stylesheets/general.sass
@@ -40,8 +40,9 @@ input
 	&:hover
 		background-color: #45C3FF
 
-.outer-container
+.container
 	@include vendor(border-radius, 3px)
+	width: 300px
 	margin: 0 auto
 	padding: 20px
 	border: 1px solid #C0C0C0
