--- a/login/6/greene_victoria_zhu_steve/templates/page1.html
+++ b/login/6/greene_victoria_zhu_steve/templates/page1.html
@@ -1,9 +1,11 @@
 = extends "layout.html"
-=  block title
-		Hello there!
+= block title
+	Hello there!
 = endblock
 = block body
+	<div class="container">
 		<h1><br><br>"Did you know that the bikini was invented in ancient Rome?"</h1>
 		<br>
 		<a href="{{ url_for('logout') }}">Logout</a>
+	</div>
 = endblock
