--- a/login/6/greene_victoria_zhu_steve/templates/page2.html
+++ b/login/6/greene_victoria_zhu_steve/templates/page2.html
@@ -1,9 +1,11 @@
 = extends "layout.html"
-=  block title
+= block title
 		Why did the football coach go to the bank?
 = endblock
 = block body
+	<div class="container">
 		<h1><br><br><br>"To get his quarterback!!!"</h1>
 		<br>
 		<a href="{{ url_for('logout') }}">Logout</a>
+	</div>
 = endblock
