--- a/login/6/greene_victoria_zhu_steve/templates/page2.html
+++ b/login/6/greene_victoria_zhu_steve/templates/page2.html
@@ -4,8 +4,7 @@
 = endblock
 = block body
 	<div class="container">
-		<h1><br><br><br>"To get his quarterback!!!"</h1>
-		<br>
+		<h1>"To get his quarterback!!!"</h1>
 		<a href="{{ url_for('logout') }}">Logout</a>
 	</div>
 = endblock
