--- a/login/6/greene_victoria_zhu_steve/templates/page1.html
+++ b/login/6/greene_victoria_zhu_steve/templates/page1.html
@@ -4,7 +4,7 @@
 = endblock
 = block body
 	<div class="container">
-		<h1"Did you know that the bikini was invented in ancient Rome?"</h1>
+		<h1>"Did you know that the bikini was invented in ancient Rome?"</h1>
 		<a href="{{ url_for('logout') }}">Logout</a>
 	</div>
 = endblock
