--- a/login/6/greene_victoria_zhu_steve/static/stylesheets/application.css
+++ b/login/6/greene_victoria_zhu_steve/static/stylesheets/application.css
@@ -119,6 +119,9 @@ input {
   border-bottom: 1px solid lightgrey;
   font-weight: normal; }
 
+.error {
+  color: red; }
+
 a {
   display: inline-block;
   margin-top: 10px;
