--- a/login/6/greene_victoria_zhu_steve/static/stylesheets/general.sass
+++ b/login/6/greene_victoria_zhu_steve/static/stylesheets/general.sass
@@ -55,6 +55,9 @@ input
 	border-bottom: 1px solid lightgray
 	font-weight: normal
 
+.error
+	color: red
+
 // link to Register/Login page
 a
 	display: inline-block
