--- a/login/6/greene_victoria_zhu_steve/templates/register.html
+++ b/login/6/greene_victoria_zhu_steve/templates/register.html
@@ -3,14 +3,13 @@
 	Register
 = endblock
 = block body
-	<div class="container">
-		<h1 class="title">Register</h1>
-		<form method="post">
-			<input id="username" type="username" name="username" placeholder="Username">
-			<input id="password" type="password" name="password" placeholder="Password">
-			<input id="password-confirm" type="password" name="password-confirm" placeholder="Confirm Password">
-			<input class="button" type="submit" value="Register">
-		</form>
-	</div>
+	<form method="post">
+		<input id="username" type="username" name="username" placeholder="Username">
+		<input id="password" type="password" name="password" placeholder="Password">
+		<input id="password-confirm" type="password" name="password-confirm" placeholder="Confirm Password">
+		<input class="button" type="submit" value="Register">
+	</form>
+= endblock
+= block bottomlink
 	<a class="bottom-link" href="{{ url_for('login') }}">Already have an account? Login.</a>
 = endblock
