--- a/login/6/greene_victoria_zhu_steve/templates/layout.html
+++ b/login/6/greene_victoria_zhu_steve/templates/layout.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>
-    	= block title
-    	= endblock
-    </title>
+    <title>{{ title }}</title>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='stylesheets/application.css') }}">
 </head>
 <body>
 	<div class="center-outer">
 	    <span>
-			= block body
+	    	<div class="container">
+	    		<p class="error">
+	    		</p>
+	    		<h1 class="title">
+		    		= block title
+		    		= endblock
+	    		</h1>
+				= block body
+				= endblock
+			</div>
+			= block bottomlink
 			= endblock
 		</span>
 	</div>
