--- a/login/6/lui_marlena_luo_jason/templates/register.html
+++ b/login/6/lui_marlena_luo_jason/templates/register.html
@@ -1,6 +1,6 @@
 <h1> Register Here </h1>
 
-<form action = "/hidden" method = "POST">
+<form method = "POST">
 username: <input type = "text" name = "username">
 <br>
 password: <input type = "text" name = "username">
