--- a/login/6/greene_victoria_zhu_steve/templates/page1.html
+++ b/login/6/greene_victoria_zhu_steve/templates/page1.html
@@ -3,8 +3,10 @@
 	Hello there!
 = endblock
 = block body
-	<h2>"Did you know that the bikini was invented in ancient Rome?"</h2>
+	<h2>Did you know that the bikini was invented in ancient Rome?</h2>
 = endblock
 = block bottomlink
+	<a href="{{ url_for('page') }}">Reload the page</a>
+	<br>
 	<a href="{{ url_for('logout') }}">Logout</a>
 = endblock
