--- a/login/6/huang_edric_yin_jeffrey/templates/register.html
+++ b/login/6/huang_edric_yin_jeffrey/templates/register.html
@@ -1,14 +1,14 @@
 <html>
 
-  <b>Register</b>
+  <h1>Register</h1>
   
-  <h2>{{error}}</h2>
-  <h2>Please enter a username and password</h2>
+  <b> <font color="red"> {{error}}</font></b>
+  <p>Please enter a username and password</p>
   <form method="POST">
-    Username: <input type="text" name="username"> </input>
-    Password: <input type="password" name="password"> </input>
+    Username: <input type="text" name="username"> </input></br>
+    Password: <input type="password" name="password"> </input></br>
     <input type="submit" name="button" value="Submit"> </input>
-    <input type="submit" name="button" value="cancel"> </input>
+    <input type="submit" name="button" value="Cancel"> </input>
   </form>
   
 </html>
