Show login, logout, and register only when appropriate

--- a/login/7/vivian_josh/templates/home.html
+++ b/login/7/vivian_josh/templates/home.html
@@ -1,8 +1,11 @@
 <html>
     <body>
+        {% if logged_in %}
+        <a href="logout">Logout</a> 
+        {% else %}
         <a href="login">Login</a> | 
-        <a href="register">Register</a> | 
-        <a href="logout">Logout</a> | 
+        <a href="register">Register</a> 
+        {% endif %}
         <br>
         <hr>
         {% if logged_in %}
