--- a/login/7/vivian_josh/templates/login.html
+++ b/login/7/vivian_josh/templates/login.html
@@ -1,6 +1,9 @@
 <html>
     <body>
         <h2> Login: </h2>
+        {% if message is defined %}
+        {{ message }}
+        {% endif %}
         <form method="POST">
             Username: <input type="text" name="username" value="">
             Password: <input type="password" name="password" value="">
