--- a/login/7/conybeare_sebastian_mei_kelvin/templates/register.html
+++ b/login/7/conybeare_sebastian_mei_kelvin/templates/register.html
@@ -6,6 +6,7 @@
 <form method = "post">
   Username: <input type = "text" name = Username required> <br>
   Password: <input type = "password" name = Password required> <br>
+  Confirm Password: <input type = "password" name = Confirm Password required> <br>
   <input type = "submit" value = "Enter"> <br>
 </form>
 
