--- a/login/7/wan_takchi_nancy_dai/templates/register.html
+++ b/login/7/wan_takchi_nancy_dai/templates/register.html
@@ -15,7 +15,7 @@
       <input type = "submit" name = "button" value = "Register">
       <br>
       <p> Signed up already? Login below. </p>
-      <input type = "submit" name = "button" value = "Login"
+      <a href = "/login"> Login </href>
     </form>
   </body>
   
