--- a/login/7/conybeare_sebastian_mei_kelvin/templates/Error.html
+++ b/login/7/conybeare_sebastian_mei_kelvin/templates/Error.html
@@ -7,7 +7,7 @@ You have reached this page because of the following reasons:
 1. You suck
 2. The username you're trying to register for already exists
 <p>
-<a href "/register"> Go back and try again</a>
+<a href = "/register"> Go back and try again</a>
 
 
 
