--- a/login/7/conybeare_sebastian_mei_kelvin/templates/login.html
+++ b/login/7/conybeare_sebastian_mei_kelvin/templates/login.html
@@ -2,8 +2,8 @@
 <h1> Login </h1>
 
 <form method = "post">
-  Username: <input type = "text" name = Username required> <br>
-  Password: <input type = "password" name = Password required> <br>
+  Username: <input type = "text" name = Username> <br>
+  Password: <input type = "text" name = Password> <br>
   <input type = "submit" value = "Enter"> <br>
 </form>
 
