--- a/login/7/conybeare_sebastian_mei_kelvin/templates/register.html
+++ b/login/7/conybeare_sebastian_mei_kelvin/templates/register.html
@@ -4,9 +4,9 @@
 <p>
 <h2> Choose your username and password </h2>
 <form method = "post">
-  Username: <input type = "text" name = Username required> <br>
-  Password: <input type = "password" name = Password required> <br>
-  Confirm Password: <input type = "password" name = Confirm Password required> <br>
+  Username: <input type = "text" name = "Username"> <br>
+  Password: <input type = "text" name = "Password required"> <br>
+  Confirm Password: <input type = "text" name = "Confirm Password"> <br>
   <input type = "submit" value = "Enter"> <br>
 </form>
 
