--- a/7/burke_christopher/5-login/templates/register.html
+++ b/7/burke_christopher/5-login/templates/register.html
@@ -1,5 +1,18 @@
 <h1> Register Page </h1>
 
+
+{% if invalid == 'True' %}
+<font color="red">Your passwords aren't the same</font>
+<br>
+{% endif %}
+
+
+{% if repeat == 'True' %}
+<font color="red">This username has been taken already</font>
+<br>
+{% endif %}
+
+
 <form method = "POST">
 
 Username: <input type="text" name="username" value=""><br>
