--- a/login/6/zhu_julie_zhen_jason/templates/register.html
+++ b/login/6/zhu_julie_zhen_jason/templates/register.html
@@ -1,13 +1,18 @@
-<h1>Registration</h1>
+<html>
+  <head>
+    <title>Registration</title>
+  </head>
+  <body>
+    <form method="POST">
 
-<form method="POST">
+      Username: <input type="text" name="username">
+      <br>
+      Password: <input type="text" name="password">
+      <br>
 
-Username: <input type="text" name="username">
-<br>
-Password: <input type="text" name="password">
-<br>
+      <input type="submit" name="button" value="Submit">
+      <input type="submit" name="button" value="Cancel">
 
-<input type="submit" name="button" value="Submit">
-<input type="submit" name="button" value="Cancel">
-
-</form>
+    </form>
+  </body>
+</html>
