--- a/login/6/zhu_julie_zhen_jason/templates/login.html
+++ b/login/6/zhu_julie_zhen_jason/templates/login.html
@@ -1,15 +1,21 @@
 <html>
   <head>
-    <title> Login Page</title>
+    <title>Login Page</title>
   </head>
   
   <body>
-  <a href="/register">Don't have an account? Register here</a><br><br>
+  <a href="/register">Don't have an account? Register here!cd</a><br><br>
   <form method="post">
     Username: <input name="username" /><br>
     Password: <input name="password" type="password" ><br>
-    <input value="Login" type="submit" >
+    <input value="Login" name="button" type="submit" >
+    <input value="Cancel" name="button" type="submit" >
 
     </form>
+
+  
+
+
+
   <body>
 </html>
