--- a/login/7/wan_takchi_nancy_dai/templates/home.html
+++ b/login/7/wan_takchi_nancy_dai/templates/home.html
@@ -8,6 +8,7 @@
   
   <body>
     <h1 style = "text-align: center"> Welcome </h1>
+    <a href = "/account"> My Account </a>
     <a href = "/logout"> Logout </a>
   </body>
 
