Add password change form, clean up code.
Add form allowing logged-in users to change their password.
	Form has no logic.
Tweak code to be more readable.
	Add an extra line between functions.
	Split long lines over two lines.
	Move <br> tags from their own lines to the end of the prior
	line.

--- a/login/7/zane_hunter/templates/ferns.html
+++ b/login/7/zane_hunter/templates/ferns.html
@@ -10,6 +10,6 @@ h1 {
 </style>
 <h1> what you came here for, {{name}}</h1> 
 
-<a href="/logout/"> click this if you hate happiness</a>
-<br>
-<a href="/wittle"> click this for leet haxxorz</a>
+<a href="/wittle"> click this for leet haxxorz</a> <br>
+<a href='/change-password'> change password </a> <br>
+<a href="/logout"> click this if you hate happiness</a>
