--- a/login/7/zane_hunter/templates/login.html
+++ b/login/7/zane_hunter/templates/login.html
@@ -6,6 +6,5 @@
 	<input type="submit" value="give us your laurels"> <br>
 </form>
 
-<a href="/"> Return to your home-related location </a>
-<br>
+<a href="/"> Return to your home-related location </a> <br>
 <a href="/register"> You haven't registered? What's your problem? </a>
