--- a/login/6/greene_victoria_zhu_steve/static/stylesheets/application.css
+++ b/login/6/greene_victoria_zhu_steve/static/stylesheets/application.css
@@ -20,6 +20,11 @@
   height: 100%;
   text-align: center; }
   .center-outer:before {
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -o-user-select: none;
+    user-select: none;
     display: inline-block;
     height: 100%;
     content: "";
