--- a/login/6/greene_victoria_zhu_steve/static/stylesheets/mixins.sass
+++ b/login/6/greene_victoria_zhu_steve/static/stylesheets/mixins.sass
@@ -30,6 +30,7 @@
 	height: 100%
 	text-align: center
 	&:before
+		@include vendor(user-select, none)
 		display: inline-block
 		height: 100%
 		content: ''
@@ -37,6 +38,3 @@
 		font-size: 0
 	& > span:first-child
 		@include center-inner
-
-.center-outer
-	@include center-outer
