--- a/login/6/greene_victoria_zhu_steve/templates/page.html
+++ b/login/6/greene_victoria_zhu_steve/templates/page.html
@@ -1,9 +1,9 @@
 = extends "layout.html"
 = block title
-	Why did the football coach go to the bank?
+	{{ title }}
 = endblock
 = block body
-	<h2>To get his quarterback!!!</h2>
+	<h2>{{ answer }}</h2>
 = endblock
 = block bottomlink
 	<a href="{{ url_for('page') }}">Reload the page</a>
