Clean up registration form.
Change password fields from plaintext to password.
Make success page look a bit nicer by putting username in the h3.

--- a/login/7/zane_hunter/templates/register-form.html
+++ b/login/7/zane_hunter/templates/register-form.html
@@ -5,8 +5,8 @@ Sorry, the username {{ d['username'] }} is taken.
 {% endif %}
 
 <form method="POST">
-	Username: <input type="text" name="username"><br>
-	Password: <input type="text" name="password"><br>
-	Confirm password: <input type="text" name="passconfirm"><br>
+	Username: <input type="text" name="username"> <br>
+	Password: <input type="password" name="password"> <br>
+	Confirm password: <input type="password" name="passconfirm"> <br>
 	<input type="submit" name="button" value="Register">
 </form>
