--- a/login/7/zane_hunter/templates/register-success.html
+++ b/login/7/zane_hunter/templates/register-success.html
@@ -1,7 +1,5 @@
 <h1> Success registering </h1>
 
-<h3> Your username is: </h3>
-{{ d['username'] }}
-<br>
+<h3> Your username is: {{ d['username'] }} </h3>
 
 <a href="/login/"> Go home </a>
