Add functional login with SQL integration.
Implement login framework with SQL integration; everything's
functional, and nearly identical to the python-shelf version.
Still, rough edges (like lack of duplicate-check in the registration
script) remain; will iron out later.

--- a/login/6/kozak_severyn_yuen_jared/templates/register.html
+++ b/login/6/kozak_severyn_yuen_jared/templates/register.html
@@ -7,9 +7,9 @@
 	</head>
 	<body>
 		<form method="post">
-			Username: <input type="text" name="Username"><br>
-			Password: <input type="password" name="Password"><br>
-			Re-type Password: <input type="password" name="PasswordRetype"><br>
+			Username: <input type="text" name="username"><br>
+			Password: <input type="password" name="password"><br>
+			Re-type Password: <input type="password" name="passwordRetype"><br>
 			<input type="submit" name="Submit">
 	</body>
 </html>
