--- a/login/6/kozak_severyn_yuen_jared/templates/login.html
+++ b/login/6/kozak_severyn_yuen_jared/templates/login.html
@@ -7,8 +7,8 @@
 	</head>
 	<body>
 		<form method="post">
-			Username: <input type="text" name="Username"><br>
-			Password: <input type="password" name="Password"><br>
+			Username: <input type="text" name="username"><br>
+			Password: <input type="password" name="password"><br>
 			<input type="submit" name="Submit">
 			<a href="/register">Register</a>
 	</body>
