html updated, mongo needs to be used in app and auth

--- a/login/6/chen_simon_tang_derek/templates/change.html
+++ b/login/6/chen_simon_tang_derek/templates/change.html
@@ -1,13 +1,13 @@
-<h1> Register </h1>
+﻿<h1> Change Password </h1>
 
 <form method="POST">
 <h3>{{message}}</h3>
 <br>
-Username: <input type="text" name="username">
+Old Password: <input type = "password" name = "password">
 <br>
-Password: <input type = "password" name = "password">
+New Password: <input type = "password" name = "newpassword">
 <br>
-Confirm Password: <input type = "password" name = "confirmpassword">
+Confirm New Password: <input type = "password" name = "confirmnewpassword">
 <br>
 <br>
 Security Question:
@@ -22,7 +22,7 @@ Answer: <input type="text" name="answer">
 <br>
 <input type = "submit" name = "button" value= "Submit">
 <input type = "submit" name = "button" value= "Cancel">
-<a href="\login"><span class="s1">Back To Login</span></a>
+<a href="\members"><span class="s1">Back To Home</span></a>
 </form>
 
 
