--- a/login/6/chen_simon_tang_derek/templates/login.html
+++ b/login/6/chen_simon_tang_derek/templates/login.html
@@ -6,6 +6,8 @@
   <br>
  Password:  <input type ="password" name = "password">
   <br>
+ <a href="\recover"><span class="s1">Forgot Your Password?</span></a>
+  <br>
   <input type ="submit" name = "button" value = "Login">
   <input type ="submit" name = "button" value = "Cancel">
   <a href="\register"><span class="s1">Register</span></a>
