--- a/login/6/chen_simon_tang_derek/templates/recover.html
+++ b/login/6/chen_simon_tang_derek/templates/recover.html
@@ -1,13 +1,9 @@
-<h1> Register </h1>
+﻿<h1> Recover Password </h1>
 
 <form method="POST">
 <h3>{{message}}</h3>
 <br>
 Username: <input type="text" name="username">
-<br>
-Password: <input type = "password" name = "password">
-<br>
-Confirm Password: <input type = "password" name = "confirmpassword">
 <br>
 <br>
 Security Question:
