--- a/login/6/kozak_severyn_yuen_jared/templates/index.html
+++ b/login/6/kozak_severyn_yuen_jared/templates/index.html
@@ -2,14 +2,16 @@
 <html>
 	<head>
 		<title>
-			Register
+			Index
 		</title>
 	</head>
 	<body>
 		<a href="/" >Home</a><br>
 		<a href="/register" >Register</a><br>
 		{% if loggedIn == True %}
-			<a href="/logout" >Logout</a><br>
+			<form method="POST">
+				<button>Logout</button><br>
+			</form>
 		{% else %}
 			<a href="/login" >Login</a><br>
 		{% endif %}
