--- a/login/6/lam_raymond_wu_jiasen/templates/login.html
+++ b/login/6/lam_raymond_wu_jiasen/templates/login.html
@@ -2,7 +2,7 @@
 {{message}}
 <form method = "POST">
 Username: <input type="text" name="username"><br>
-Password: <input type="text" name="password"><br>
+Password: <input type="password" name="password"><br>
 <hr>
 <input type="submit" name="button" value="Login">
 <input type="submit" name="button" value="Cancel">
