--- a/login/6/lam_raymond_wu_jiasen/templates/register.html
+++ b/login/6/lam_raymond_wu_jiasen/templates/register.html
@@ -1,8 +1,9 @@
 <h1>Register</h1>
-{{message}}
+<p> {{message}} </p>
 <form method = "POST">
 Username: <input type="text" name="username"><br>
-Password: <input type="text" name="password"><br>
+Password: <input type="password" name="password"><br>
+Confirm PW: <input type="password" name="password2"><br>
 <hr>
 <input type="submit" name="button" value="Register">
 <input type="submit" name="button" value="Cancel">
