made home link to setpass.html, setpass now requires old password

--- a/login/7/field-thompson_will_luo_haoxin/templates/setpass.html
+++ b/login/7/field-thompson_will_luo_haoxin/templates/setpass.html
@@ -2,5 +2,10 @@
 <form method="POST">
 <input type="text" name="username" placeholder="username"> <br>
 <input type="text" name="password" placeholder="password"> <br>
+<input type="text" name="npassword" placeholder="New Password"> <br>
 <input type="submit" name="button" value="Login">
 </form>
+<br>
+
+<a href = "/">Back</a>
+<a href = "/logout">Log out</a>
