--- a/login/6/greene_victoria_zhu_steve/templates/layout.html
+++ b/login/6/greene_victoria_zhu_steve/templates/layout.html
@@ -9,8 +9,7 @@
 	    <span>
 	    	<div class="container">
 	    		<h1 class="title">
-		    		= block title
-		    		= endblock
+		    		{{ title }}
 	    		</h1>
 	    		= if error
 	    			<p class="error">
