--- a/login/6/cohen_eli_rehab_arfan/templates/home.html
+++ b/login/6/cohen_eli_rehab_arfan/templates/home.html
@@ -5,11 +5,10 @@
 	</head>
 
 	<body>
-		<h2> Welcome to the Main Page, {{username}}! This is a
-		simple Login Application Framework.</h2> 
+		<h4> Welcome to the Main Page! This is a simple Login Application Framework.</h4> 
 		<h2>Stuy CS Rules!</h2>
-		<h3>For the first 3 digits of pi(!) go to /pi</h3>
-		<h3>For a complete list of reasons to buy windows 8, go to /windows</h3>
+		<h3>For the first 3 digits of pi(!) go <a href="/pi">here</a></h3>
+		<h3>For a complete list of reasons to buy windows 8, go <a href="/windows">here</a></h3>
 		<a href="/logout"> Logout! </a><br>
 	</body>
 </html>
