--- a/login/6/cohen_eli_rehab_arfan/templates/login.html
+++ b/login/6/cohen_eli_rehab_arfan/templates/login.html
@@ -1,3 +1,4 @@
+
 <html>
 	<head>
 		<title>Login</title>
@@ -10,5 +11,7 @@
 		Password: <input type="password" name="password"> </input>
 		<input type="submit" name="button" value="submit"> </input>
 		</form>
+
+		No account? <a href="/register">Register here</a>
 	</body>
 </html>
