--- a/login/7/duda_rosenberg/templates/login.html
+++ b/login/7/duda_rosenberg/templates/login.html
@@ -22,7 +22,7 @@ Password: &nbsp<input type="password" name="psswrd">
 <p>{{error}}</p>
 
  <a href="/register"> Register here </a>
-
+ <a href="/reset"> Reset Password </a>
 </body>
 
 </html>
