added auth.authenticate, changed other fxns

--- a/login/7/field-thompson_will_luo_haoxin/templates/future.html
+++ b/login/7/field-thompson_will_luo_haoxin/templates/future.html
@@ -6,7 +6,8 @@
 <p> Keith chen
 
 <br><br>
+<b>{{user}}</b> is logged in <br>
 <a href="/">Back</a>
 <a href="/logout">Log Out</a>
 <hr>
-<b>{{user}}</b> is logged in
+
