--- a/login/7/field-thompson_will_luo_haoxin/templates/setpass.html
+++ b/login/7/field-thompson_will_luo_haoxin/templates/setpass.html
@@ -3,7 +3,7 @@
 <input type="text" name="username" placeholder="username"> <br>
 <input type="text" name="password" placeholder="password"> <br>
 <input type="text" name="npassword" placeholder="New Password"> <br>
-<input type="submit" name="button" value="Login">
+<input type="submit" name="button" value="submit">
 </form>
 <br>
 
