--- a/login/7/field-thompson_will_luo_haoxin/templates/work.html
+++ b/login/7/field-thompson_will_luo_haoxin/templates/work.html
@@ -10,6 +10,6 @@ Feel motivated? Good.
 <br>
 Orrrrr if that changed your mind, you can go <a href="/">back</a> and keep <a href="/procrastination">procrastinating</a>
 <hr>
-<b>{{user}}</b> is logged in
+<b>{{user}}</b> is logged in <br>
 <a href="/">Back</a>
 <a href="/logout">Log Out</a>
