--- a/login/7/jack_cahn_alvin_leung/Login_Assignment3/Templates/changepass.html
+++ b/login/7/jack_cahn_alvin_leung/Login_Assignment3/Templates/changepass.html
@@ -5,4 +5,8 @@
 <form method="post">
   Old password: <input type = "text" name = "oldpass"><br/>
   New password: <input type = "text" name = "newpass"><br/>
+
+  <input type="Submit" name="button" value="complete">
 </form>
+
+
