Finishing touches on login: fix erros in auth.py, add confirming for passwords, clean up templates

--- a/login/7/attal_benjamin_lin_michele/login2/templates/change.html
+++ b/login/7/attal_benjamin_lin_michele/login2/templates/change.html
@@ -12,11 +12,13 @@
 </head>
 <h2>Change Password</h2>
 <form method=POST>
-  <input type=text name=username>
-  <input type=password name=password>
-  <intput type=password name=newpass>
+  Old Password:
+  <input type=password name=oldpass><br>
+  New Password:
+  <input type=password name=newpass><br>
+  Confirm:
+  <input type=password name=cpass><br>
   <input type=submit>
 </form>
-
-<a href="/login">Login</a>
+<a href="/">Home</a>
 </html>
