--- a/login/7/attal_benjamin_lin_michele/login2/templates/register.html
+++ b/login/7/attal_benjamin_lin_michele/login2/templates/register.html
@@ -12,8 +12,12 @@
 </head>
 <h2>Register</h2>
 <form method=POST>
+  Username:
   <input type=text name=username>
+  Password:
   <input type=password name=password>
+  Confirm:
+  <input type=password name=cpass>
   <input type=submit>
 </form>
 
