--- a/login/7/attal_benjamin_lin_michele/login2/templates/home.html
+++ b/login/7/attal_benjamin_lin_michele/login2/templates/home.html
@@ -1,5 +1,6 @@
 <title>Home Page</title>
 <h2>Welcome home</h2>
 
-<a href="/logout">logout</a>
-<a href="/something">Mystery Page</a>
+<a href="/logout">Logout</a><br>
+<a href="/something">Mystery Page</a><br>
+<a href="/change">Change Password</a><br>
