--- a/login/7/attal_benjamin_lin_michele/login2/templates/login.html
+++ b/login/7/attal_benjamin_lin_michele/login2/templates/login.html
@@ -12,7 +12,9 @@
 </head>
 <h2>Login</h2>
 <form method=POST>
+  Username:
   <input type=text name=username>
+  Password:
   <input type=password name=password>
   <input type=submit>
 </form>
