Updated and Working. Needs to test out bugs.

--- a/login/6/lui_marlena_luo_jason/templates/register.html
+++ b/login/6/lui_marlena_luo_jason/templates/register.html
@@ -3,7 +3,7 @@
 <form method = "POST">
 username: <input type = "text" name = "username">
 <br>
-password: <input type = "text" name = "username">
+password: <input type = "text" name = "password">
 <br>
 <input type = "submit" name = "button" value = "register">
 <input type = "submit" name = "button" value = "cancel">
