--- a/login/6/lui_marlena_luo_jason/templates/index.html
+++ b/login/6/lui_marlena_luo_jason/templates/index.html
@@ -4,6 +4,5 @@ Congratulations, you have logged in successfully.
 <br>
 For more information on how to join, please call 1-917-846-0262
 <br>
-<input type = "submit" name = "button" value = "logout">
 <p> To Logout</p>
-<a href="/logout">Logout</a>
+<a href="/reset">Logout</a>
