--- a/login/7/jack_cahn_alvin_leung/Login_Assignment3/Templates/index.html
+++ b/login/7/jack_cahn_alvin_leung/Login_Assignment3/Templates/index.html
@@ -1,2 +1,2 @@
 <h1>This is the homepage</h1>
-<a href="localhost:5005/changepw">Press here to change your password</a>
+<a href="/changepw">Press here to change your password</a>
