--- a/login/6/kurtovic_benjamin_ye_tyrone/templates/index.html
+++ b/login/6/kurtovic_benjamin_ye_tyrone/templates/index.html
@@ -7,6 +7,6 @@
     </head>
     <body>
         <h1>Welcome, {{username}}!</h1>
-        <p><a href="/logout">Logout</a></p>
+        <p><a href="/changepass">Change Password</a> &bull; <a href="/logout">Logout</a></p>
     </body>
 </html>
