Basic change password implemented. Very unpolished

--- a/login/6/huang_edric_yin_jeffrey/templates/home.html
+++ b/login/6/huang_edric_yin_jeffrey/templates/home.html
@@ -1,7 +1,7 @@
 <html>
 
   <h1> Welcome to the Main Page, {{username}}! This is a simple Login App. </h1> 
-
+  <a href="/changepassword"> Change your password </a><br>
   <a href="/logout"> Logout! </a><br>
   
 </html>
