--- a/login/7/wan_takchi_nancy_dai/login3/templates/home.html
+++ b/login/7/wan_takchi_nancy_dai/login3/templates/home.html
@@ -8,8 +8,10 @@
 
   <body>
     <h2 style = "text-align:center"> Welcome {{user}} </h2>
-    <a href = "/logout"> Logout </a>
-    <a href = "/account"> Account Settings </a>
+    <ul display = "inline" list-style-type = "none">
+      <li><a href = "/logout"> Logout </a></li>
+      <li><a href = "/account"> Account Settings </a></li>
+    </ul>
   </body>
 
 </html>
