--- a/login/7/wan_takchi_nancy_dai/login3/templates/account.html
+++ b/login/7/wan_takchi_nancy_dai/login3/templates/account.html
@@ -7,8 +7,10 @@
   </head>
 
   <body>
-    <a href = "/home"> Home </a>
-    <a href = "/logout"> Logout </a>
+    <ul display = "inline" list-style-type = "none">
+    <li><a href = "/home"> Home </a></li>
+    <li><a href = "/logout"> Logout </a></li>
+    </ul>
     <br>
     {{message}}
     <br>
